Fix overflow

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -11,6 +11,7 @@ h3 {
 }
 body {
   font-family: "Lato", sans-serif;
+  overflow: hidden;
 }
 
 h3,
